syntax = "proto3";

package protobuf;


message Organization {
	string ID = 1;
	string Name = 2;
	string City = 3;
	string State = 4;
	string Zip = 5;
	string Occupation = 6;
	string Employer = 7;
	repeated string Transactions = 8;
	float TotalOutAmt = 9;
	float TotalOutTxs = 10;
	float AvgTxOut = 11;
	float TotalInAmt = 12;
	float TotalInTxs = 13;
	float AvgTxIn = 14;
	float NetBalance = 15;
	map<string, float> RecipientsAmt = 16;
	map<string, float> RecipientsTxs = 17;
	map<string, float> SendersAmt = 18;
	map<string, float> SendersTxs = 19;
}