syntax = "proto3";

package protobuf;

import "google/protobuf/timestamp.proto";

message SearchResult {
    string ID = 1;
    string Name = 2;
    string City = 3;
    string State = 4;
    string Employer = 5;
    string Bucket = 6;
    repeated string Years = 7;
}

message ResultList {
    repeated string IDs = 1;
}


message LookupMap {
    map<string, SearchResult> Lookup = 1;
}

message IndexData {
    float TermsSize = 1;
    float LookupSize = 2;
    google.protobuf.Timestamp LastUpdated = 3;
    map<string, bool> Completed = 4;
    map<string, ShardRanges> Shards = 5;
    repeated string YearsCompleted = 6;
}

message ShardRanges {
    string Term = 1;
    float Shards = 2;
    map<string, Range> Ranges = 3;
}

message Range {
    repeated string Range = 1;
}

message PartitionMap {
    map<string, bool> Partitions = 1;
}